adjust container widht

--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -40,7 +40,8 @@ body * {
 
 #container {
   /* border: 1px solid red; */
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   /* height: 712px; >> We removed the height to respect the navigation flux */
   margin: 56px auto 0px;
   padding: 0 24px;
